Prediction was affected with Lime so made a workout

--- a/WebApp/keywords_roughdraft.ipynb
+++ b/WebApp/keywords_roughdraft.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Panik\\miniconda3\\envs\\tf\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -37435,20 +37444,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Note: Using /GPU:0\n",
       "WARNING:tensorflow:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
-      "195/250 [======================>.......] - ETA: 40s"
+      "250/250 [==============================] - 14s 51ms/step\n",
+      "Intercept 0.38295670118686864\n",
+      "Prediction_local [0.36962098]\n",
+      "Right: 0.41457096\n",
+      "Intercept 0.33514101960830445\n",
+      "Prediction_local [0.38838303]\n",
+      "Right: 0.36956146\n",
+      "Intercept 0.4195685133944527\n",
+      "Prediction_local [0.35993166]\n",
+      "Right: 0.36851445\n",
+      "250/250 [==============================] - 13s 51ms/step\n",
+      "Intercept 0.3830311024749733\n",
+      "Prediction_local [0.35429679]\n",
+      "Right: 0.3763895\n",
+      "Intercept 0.32480263000758214\n",
+      "Prediction_local [0.39518771]\n",
+      "Right: 0.3327407\n",
+      "Intercept 0.47707606268466773\n",
+      "Prediction_local [0.29678046]\n",
+      "Right: 0.32053545\n",
+      "250/250 [==============================] - 13s 52ms/step\n",
+      "Intercept 0.38327310105532436\n",
+      "Prediction_local [0.37039684]\n",
+      "Right: 0.41457096\n",
+      "Intercept 0.33559602090622676\n",
+      "Prediction_local [0.38704443]\n",
+      "Right: 0.36956146\n",
+      "Intercept 0.41596527170299225\n",
+      "Prediction_local [0.36072635]\n",
+      "Right: 0.36851445\n",
+      "250/250 [==============================] - 13s 52ms/step\n",
+      "Intercept 0.39102293251081255\n",
+      "Prediction_local [0.33135083]\n",
+      "Right: 0.36697018\n",
+      "Intercept 0.29966530777306327\n",
+      "Prediction_local [0.452742]\n",
+      "Right: 0.35730913\n",
+      "Intercept 0.49129837685687516\n",
+      "Prediction_local [0.23906522]\n",
+      "Right: 0.29914042\n",
+      "250/250 [==============================] - 13s 52ms/step\n",
+      "Intercept 0.2185539560118363\n",
+      "Prediction_local [0.28561296]\n",
+      "Right: 0.28567752\n",
+      "Intercept 0.3455748731131649\n",
+      "Prediction_local [0.35015965]\n",
+      "Right: 0.35001025\n",
+      "Intercept 0.6202307818246469\n",
+      "Prediction_local [0.38218789]\n",
+      "Right: 0.38180476\n"
      ]
     }
    ],
    "source": [
     "from lime import lime_text\n",
+    "\n",
     "\n",
     "# Combine Everything into a Function for UI\n",
     "def model_predict(tweet):\n",
@@ -37478,16 +37538,278 @@
     "    for word_index, label_prop in explanation.as_map()[max_label]:\n",
     "        if word_index >= 0:\n",
     "            keywords.append(tweet_as_list[word_index])\n",
-    "    print(max_label, keywords)\n",
+    "    # print(max_label, keywords)\n",
     "    return max_label, keywords\n",
     "\n",
-    "model = tf.keras.models.load_model('./models/BERT_Trained_Model.h5', custom_objects={\"TFBertModel\": TFBertModel})\n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
-    "demo_df = pd.read_csv(\"../LiveDemoDataset/live_demo_short.csv\")\n",
+    "device_type = \"/CPU:0\"\n",
+    "if len(tf.config.list_physical_devices(\"GPU\")) > 0:\n",
+    "    device_type = \"/GPU:0\"\n",
+    "print(\"Note: Using {0}\".format(device_type))\n",
     "\n",
-    "for tweet in demo_df[\"Tweet\"]:\n",
-    "    getKeywords(tweet)\n",
+    "with tf.device(device_type):\n",
+    "    model = tf.keras.models.load_model('./models/BERT_Trained_Model.h5', custom_objects={\"TFBertModel\": TFBertModel})\n",
+    "    tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "    demo_df = pd.read_csv(\"../LiveDemoDataset/live_demo_short.csv\")\n",
+    "\n",
+    "    prediction_list = []\n",
+    "    for tweet in demo_df[\"Tweet\"]:\n",
+    "        # max_label, keywords = getKeywords(tweet)\n",
+    "        prediction_list.append([*getKeywords(tweet)])\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 0, 0, 2]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x[0] for x in prediction_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 2s 2s/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 1, 2, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_texts = tokenizer(\n",
+    "    text=demo_df[\"Tweet\"].values.tolist(),\n",
+    "    add_special_tokens=True,\n",
+    "    max_length=70,\n",
+    "    truncation=True,\n",
+    "    # padding=True,\n",
+    "    padding=\"max_length\",\n",
+    "    return_tensors=\"tf\",\n",
+    "    return_token_type_ids=False,\n",
+    "    return_attention_mask=True,\n",
+    "    verbose=True,\n",
+    ")\n",
+    "results = model.predict({\"input_ids\": encoded_texts[\"input_ids\"], \"attention_mask\": encoded_texts[\"attention_mask\"]}, batch_size=20)\n",
+    "predictions = list(np.argmax(results, axis=1))\n",
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: Using /GPU:0\n",
+      "WARNING:tensorflow:Error in loading the saved optimizer state. As a result, your model is starting with a freshly initialized optimizer.\n",
+      "WARNING:tensorflow:6 out of the last 1255 calls to <function Model.make_predict_function.<locals>.predict_function at 0x0000012B22B50E50> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "1/1 [==============================] - 2s 2s/step\n",
+      "250/250 [==============================] - 14s 53ms/step\n",
+      "Intercept 0.38493953866669245\n",
+      "Prediction_local [0.3722678]\n",
+      "Right: 0.41457096\n",
+      "Intercept 0.3348992140976871\n",
+      "Prediction_local [0.38629248]\n",
+      "Right: 0.36956146\n",
+      "Intercept 0.42178351506758577\n",
+      "Prediction_local [0.36056419]\n",
+      "Right: 0.36851445\n",
+      "250/250 [==============================] - 13s 53ms/step\n",
+      "Intercept 0.38303664652367253\n",
+      "Prediction_local [0.3562786]\n",
+      "Right: 0.3763895\n",
+      "Intercept 0.322087916041772\n",
+      "Prediction_local [0.39548929]\n",
+      "Right: 0.3327407\n",
+      "Intercept 0.4799891697630723\n",
+      "Prediction_local [0.29778553]\n",
+      "Right: 0.32053545\n",
+      "250/250 [==============================] - 13s 53ms/step\n",
+      "Intercept 0.38296868693410985\n",
+      "Prediction_local [0.37101313]\n",
+      "Right: 0.41457096\n",
+      "Intercept 0.33417002876296864\n",
+      "Prediction_local [0.3878497]\n",
+      "Right: 0.36956146\n",
+      "Intercept 0.41924650649068673\n",
+      "Prediction_local [0.35946377]\n",
+      "Right: 0.36851445\n",
+      "250/250 [==============================] - 13s 52ms/step\n",
+      "Intercept 0.3935474585170322\n",
+      "Prediction_local [0.32853611]\n",
+      "Right: 0.36697018\n",
+      "Intercept 0.2970431697071868\n",
+      "Prediction_local [0.45783155]\n",
+      "Right: 0.35730913\n",
+      "Intercept 0.49668111780743107\n",
+      "Prediction_local [0.23243471]\n",
+      "Right: 0.29914042\n",
+      "250/250 [==============================] - 13s 52ms/step\n",
+      "Intercept 0.21855396855534084\n",
+      "Prediction_local [0.28561024]\n",
+      "Right: 0.28567752\n",
+      "Intercept 0.34558173071255766\n",
+      "Prediction_local [0.35015659]\n",
+      "Right: 0.35001025\n",
+      "Intercept 0.6202192121424703\n",
+      "Prediction_local [0.38220087]\n",
+      "Right: 0.38180476\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The Results are different so call the label based on our model:\n",
+    "\n",
+    "from lime import lime_text\n",
+    "\n",
+    "# Combine Everything into a Function for UI\n",
+    "def model_predict(tweet):\n",
+    "    encoded_texts = tokenizer(\n",
+    "        text=tweet,\n",
+    "        add_special_tokens=True,\n",
+    "        max_length=70,\n",
+    "        truncation=True,\n",
+    "        # padding=True,\n",
+    "        padding=\"max_length\",\n",
+    "        return_tensors=\"tf\",\n",
+    "        return_token_type_ids=False,\n",
+    "        return_attention_mask=True,\n",
+    "        verbose=True,\n",
+    "    )\n",
+    "\n",
+    "    prediction = model.predict([{\"input_ids\": encoded_texts[\"input_ids\"], \"attention_mask\": encoded_texts[\"attention_mask\"]}], batch_size=20)\n",
+    "    return prediction\n",
+    "\n",
+    "def getKeywords(label, tweet):\n",
+    "    explainer = lime_text.LimeTextExplainer(class_names=[0,1,2], verbose=True)\n",
+    "    explanation = explainer.explain_instance(tweet, model_predict, labels=[0,1,2])\n",
+    "    result = explanation.predict_proba\n",
+    "    tweet_as_list = tweet.split(\" \")\n",
+    "    keywords = []\n",
+    "    for word_index, label_prop in explanation.as_map()[label]:\n",
+    "        if word_index >= 0:\n",
+    "            keywords.append(tweet_as_list[word_index])\n",
+    "    return keywords\n",
+    "\n",
+    "device_type = \"/CPU:0\"\n",
+    "if len(tf.config.list_physical_devices(\"GPU\")) > 0:\n",
+    "    device_type = \"/GPU:0\"\n",
+    "print(\"Note: Using {0}\".format(device_type))\n",
+    "\n",
+    "with tf.device(device_type):\n",
+    "    model = tf.keras.models.load_model('./models/BERT_Trained_Model.h5', custom_objects={\"TFBertModel\": TFBertModel})\n",
+    "    tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "    demo_df = pd.read_csv(\"../LiveDemoDataset/live_demo_short.csv\")\n",
+    "\n",
+    "    encoded_texts = tokenizer(\n",
+    "        text=demo_df[\"Tweet\"].values.tolist(),\n",
+    "        add_special_tokens=True,\n",
+    "        max_length=70,\n",
+    "        truncation=True,\n",
+    "        # padding=True,\n",
+    "        padding=\"max_length\",\n",
+    "        return_tensors=\"tf\",\n",
+    "        return_token_type_ids=False,\n",
+    "        return_attention_mask=True,\n",
+    "        verbose=True,\n",
+    "    )\n",
+    "    results = model.predict({\"input_ids\": encoded_texts[\"input_ids\"], \"attention_mask\": encoded_texts[\"attention_mask\"]}, batch_size=20)\n",
+    "    predictions = list(np.argmax(results, axis=1))\n",
+    "    predictions\n",
+    "\n",
+    "\n",
+    "    prediction_list = []\n",
+    "    for tweet, label in zip(demo_df[\"Tweet\"], predictions):\n",
+    "        # max_label, keywords = getKeywords(tweet)\n",
+    "        prediction_list.append(getKeywords(label, tweet))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['fallout',\n",
+       "  'amp',\n",
+       "  'wipeout',\n",
+       "  'debt',\n",
+       "  'economic',\n",
+       "  'recovery',\n",
+       "  'demographic',\n",
+       "  'change',\n",
+       "  'push',\n",
+       "  'climate'],\n",
+       " ['hypocrites',\n",
+       "  'hellonheels2020',\n",
+       "  'proudelephantus',\n",
+       "  'wind',\n",
+       "  'beach',\n",
+       "  'ruin',\n",
+       "  'mansion',\n",
+       "  'forbidden',\n",
+       "  'legally',\n",
+       "  'turbines'],\n",
+       " ['fallout',\n",
+       "  'amp',\n",
+       "  'inflation',\n",
+       "  'wipeout',\n",
+       "  'economic',\n",
+       "  'recovery',\n",
+       "  'debt',\n",
+       "  'humans',\n",
+       "  'climate',\n",
+       "  'change'],\n",
+       " ['pbsj4nydar',\n",
+       "  'warnitz',\n",
+       "  'evelyn',\n",
+       "  'stage32',\n",
+       "  'life',\n",
+       "  'logline',\n",
+       "  'added',\n",
+       "  'titled',\n",
+       "  'stage32',\n",
+       "  'von'],\n",
+       " ['royalaviaire', 'reversed', 'change', 'climate']]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction_list"
    ]
   },
   {
@@ -38050,7 +38372,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
